2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test for timespec divide by zero.
	* sp58/.cvsignore, sp58/Makefile.am, sp58/init.c, sp58/sp58.doc,
	sp58/sp58.scn: New files.

2009-07-09	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp43/init.c, sp43/sp43.scn: Add test of having the object class
	pointer being null. This does not happen naturally at this time so
	force the point.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp12/sp12.scn: Update screen to reflect priority changes from long
	ago.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac, sp27/Makefile.am, sp27/init.c,
	sp27/sp27.doc, sp27/sp27.scn: Rework sp27 so it can be reinstantiated
	as sp27a and test flushing both counting and binary semaphores.
	Reformatted.
	* sp27a/.cvsignore, sp27a/Makefile.am, sp27a/sp27a.doc,
	sp27a/sp27a.scn: New files.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spstkalloc/Makefile.am: Remove unneeded USE_TIMER_SERVER which was
	copied fomr other Makefile.am's.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp51/init.c, sp54/Makefile.am, sp55/Makefile.am, sp56/Makefile.am,
	sp57/Makefile.am, spchain/Makefile.am, spfatal10/Makefile.am,
	spfatal11/Makefile.am, spfatal12/Makefile.am: Remove unneeded
	USE_TIMER_SERVER which was copied fomr other Makefile.am's.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp57/sp57.doc: Correct.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add test of restarting a task which is in
	the middle of a sleep or wake after.
	* sp57/.cvsignore, sp57/Makefile.am, sp57/init.c, sp57/sp57.doc,
	sp57/sp57.scn: New files.

2009-07-08	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sp43/init.c, sp43/sp43.scn: Add more cases for
	rtems_object_get_class_information() to improve coverage.

2009-07-07	Joel Sherrill <joel.sherrill@OARcorp.com>
