@@ -1,0 +1,23 @@
+#
+#  $Id$
+#
+#  COPYRIGHT (c) 1989-2009.
+#  On-Line Applications Research Corporation (OAR).
+#
+#  The license and distribution terms for this file may be
+#  found in the file LICENSE in this distribution or at
+#  http://www.rtems.com/license/LICENSE.
+#
+
+This file describes the directives and concepts tested by this test set.
+
+test set name:  spthreadq01
+
+directives:
+
+  _Threadq_Extract
+
+concepts:
+
++ Ensure that when an attempt is made to extract a thread which is not blocked
+  on a thread queue, that the behavior is as expected.
